# Repository-Sync

./: .gitignore  index.html  package-lock.json  package.json  script_build.cmd  script_start.cmd
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src/components/: TitleBar.vue
src/mixin/: helper.js
src/router/: index.js
src/store/: index.js
src/store/File/: index.js
src/store/Github/: index.js
src/utils/: github.js  index.js
src/views/: About.vue  Home.vue  Index.vue  InitialSetup.vue
src/views/Initial-Setup/: Index.vue
